[package]
name = "scripty"
version = "0.1.0"
authors = ["0/0 <beerights@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
songbird = "0.1"
sentry = "0.22.0"
toml = "0.5"
once_cell = "1.5"
chrono = "0.4"
funty = "=1.1.0"
systemstat = "*"
serde_json = "1.0"
futures-core = "*"
deepspeech = "0.9"
dasp_interpolate = { version = "*", features = ["linear"] }
dasp_signal = "*"
num_cpus = "1.13"
reqwest = { version = "0.11", features = ["json"] }
opus = "0.2"
hound = "3.4"
prometheus = "0.12"
prometheus-static-metric = "0.5"
hyper = { version = "0.14", features = ["server"] }

[dependencies.serenity]
version = "0.10"
features = ["client", "standard_framework", "voice", "rustls_backend", "framework", "cache", "collector"]

[dependencies.tokio]
version = "1.0"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres"]

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Zshare-generics=y", "-Cembed-bitcode=no"]
