[package]
name = "scripty"
version = "1.2.0"
authors = ["0/0 <beerights@protonmail.com>"]
edition = "2018"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
songbird = "0.1"
toml = "0.5"
once_cell = "1.5"
chrono = "0.4"
funty = "=1.1.0"
systemstat = "*"
serde_json = "1.0"
futures-core = "*"
deepspeech = "0.9"
dasp_interpolate = { version = "*", features = ["linear"] }
dasp_signal = "*"
num_cpus = "1.13"
reqwest = { version = "0.11", features = ["json"] }
opus = "0.2"
prometheus = "0.12"
prometheus-static-metric = "0.5"
hyper = { version = "0.14", features = ["server"] }
rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "f1ecb79" }
rand = "0.8"
ring = "=0.16.19"
eval = "0.4"
tungstenite = "=0.14.0"
indexmap = "=1.6.2"

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "voice", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]

[dependencies.tokio]
version = "1.6.1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres", "offline"]

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
