[package]
name = "scripty"
version = "1.3.0"
authors = ["0/0 <beerights@protonmail.com>"]
edition = "2018"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

[workspace]
members = [
  "scripty_macros",
  "scripty_commands",
  "scripty_db",
  "scripty_core",
  "scripty_audio",
  "scripty_audio_utils",
  "scripty_config",
  "scripty_metrics",
  "scripty_webserver",
  "scripty_utils",
]

[dependencies]
scripty_core = { path = "scripty_core/" }

tracing = "0.1"

[dependencies.tokio]
version = "1.8"
features = ["full"]

[patch.crates-io]
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "current" }
