[package]
name = "scripty_audio"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
songbird = "0.1"
dashmap = "4.0"
scripty_db = { path = "../scripty_db" }
scripty_config = { path = "../scripty_config" }
scripty_metrics = { path = "../scripty_metrics" }
scripty_audio_utils = { path = "../scripty_audio_utils" }

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres", "offline"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "voice", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]

[dependencies.tokio]
version = "1.8"
features = ["full"]
