[package]
name = "scripty_audio_utils"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dasp_interpolate = { version = "*", features = ["linear"] }
dasp_signal = "*"
deepspeech = "0.9"
scripty_config = { path = "../scripty_config" }

[dependencies.tokio]
version = "1.7"
features = ["full"]