[package]
name = "scripty_commands"
version = "1.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eval = "0.4"
tracing = "0.1"
systemstat = "*"
chrono = "0.4"
serde_json = "1.0"
rand = "0.8"

scripty_db = { path = "../scripty_db" }
scripty_config = { path = "../scripty_config" }
scripty_audio = { path = "../scripty_audio" }
scripty_macros = { path = "../scripty_macros" }
scripty_utils = { path = "../scripty_utils" }
scripty_metrics = { path = "../scripty_metrics" }

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres", "offline"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "voice", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]

[dependencies.tokio]
version = "1.6.1"
features = ["full"]
