[package]
name = "scripty_db"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scripty_config = { path = "../scripty_config" }

[dependencies.tokio]
version = "1.7"
features = ["full"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "postgres", "offline"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
features = ["client", "standard_framework", "voice", "rustls_backend", "framework", "cache", "collector", "unstable_discord_api"]
